--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,80 @@
+alembic==1.16.4
 annotated-types==0.7.0
 anyio==4.9.0
+async-timeout==4.0.3
 attrs==25.3.0
 beautifulsoup4==4.13.4
 certifi==2025.7.14
 charset-normalizer==3.4.2
 click==8.2.1
+distro==1.9.0
 exceptiongroup==1.3.0
 fastapi==0.116.1
+filelock==3.18.0
+fsspec==2025.7.0
 h11==0.16.0
+hf-xet==1.1.5
+httpcore==1.0.9
+httpx==0.28.1
+huggingface-hub==0.34.3
 idna==3.10
+Jinja2==3.1.6
+jiter==0.10.0
+joblib==1.5.1
+jsonpatch==1.33
+jsonpointer==3.0.0
+langchain==0.3.27
+langchain-core==0.3.72
+langchain-text-splitters==0.3.9
+langsmith==0.4.8
+Mako==1.3.10
+MarkupSafe==3.0.2
+mpmath==1.3.0
+networkx==3.4.2
+numpy==2.2.6
+openai==1.98.0
+orjson==3.11.1
 outcome==1.3.0.post0
+packaging==24.2
+pillow==11.3.0
+pinecone==7.3.0
+pinecone-plugin-assistant==1.7.0
+pinecone-plugin-interface==0.0.7
+psycopg2-binary==2.9.10
 pydantic==2.11.7
 pydantic_core==2.33.2
 PySocks==1.7.1
+python-dateutil==2.9.0.post0
+PyYAML==6.0.2
+regex==2025.7.34
 requests==2.32.4
+requests-toolbelt==1.0.0
+safetensors==0.5.3
+scikit-learn==1.7.1
+scipy==1.15.3
 selenium==4.34.2
+sentence-transformers==5.0.0
+six==1.17.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
 soupsieve==2.7
+SQLAlchemy==2.0.42
 starlette==0.47.2
+sympy==1.14.0
+tenacity==9.1.2
+threadpoolctl==3.6.0
+tokenizers==0.21.4
+tomli==2.2.1
+torch==2.7.1
+tqdm==4.67.1
+transformers==4.54.1
 trio==0.30.0
 trio-websocket==0.12.2
 typing-inspection==0.4.1
 typing_extensions==4.14.1
 urllib3==2.5.0
+utils==1.0.2
 uvicorn==0.35.0
 websocket-client==1.8.0
 wsproto==1.2.0
+zstandard==0.23.0
